# agents_public

./: .env.example  .env.tpl  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  alembic.ini  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
docs/: design.md
migrations/: env.py
migrations/versions/: 368d3ee60f55_create_job_apps_runs.py  466e2dc6d2aa_add_email_received_at.py  6ebfd6cc10b5_add_node_timings_to_job_apps_runs.py  7f3a9c1d2e4b_allow_null_primary_label_on_triager_runs.py  9613afa628ef_merge_phase_3c_migration_heads.py  9e2bd00e2c8f_add_token_and_cost_columns_to_run_audit_tables.py  accb90e942e9_create_news_brief_runs.py  b3d8f1c20a5e_create_morning_brief_runs.py  cc9852f06dd4_create_gmail_watch_state_and_triager_.py  d5cce57529b8_add_stage_timings_to_triager_runs.py  ea9791aeeccb_create_anthropic_spend_table.py
scripts/: _backtest_common.py  backfill_email_received_at.py  backtest_job_apps.py  backtest_job_apps_e2e.py  backtest_triager.py  backtest_triager_opus.py  mint_google_token.py  verify_anthropic_spend.py
services/job_apps/: __init__.py  api.py  classifier.py  dashboard_models.py  dashboard_queries.py  extractor.py  (+8 more)
shared/: __init__.py  anthropic_admin.py  anthropic_client.py  anthropic_cost.py  auth.py  backfill_email_received_at.py  brief_format.py  db.py  gcal.py  gmail.py  health.py  http_client.py  llm_utils.py  ntn.py  settings.py
site/: .gitignore  package-lock.json  package.json
tests/: conftest.py  helpers.py  test_anthropic_cost.py  test_db.py  test_health.py  test_settings.py  test_smoke.py
(+119 files in other folders)
