[project]
name = "agents"
version = "0.0.0"
description = "Personal agent service: Gmail triager, job-apps pipeline, news brief, morning brief, spend sync."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic>=1.14.0",
    "anthropic>=0.109.1",
    "asyncpg>=0.30.0",
    "beautifulsoup4>=4.15.0",
    "fastapi>=0.115.0",
    "google-api-python-client>=2.197.0",
    "google-auth>=2.36.0",
    "httpx>=0.27.0",
    "langgraph>=1.0,<2.0",
    "langsmith>=0.2.0",
    "modal>=1.1.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "sqlalchemy[asyncio]>=2.0.36",
]

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "types-beautifulsoup4>=4.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shared", "services"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
    # langsmith's own __init__ imports its deprecated _openai_agents shim
    # (still present in 0.8.15); nothing in this repo uses that module.
    "ignore:langsmith.wrappers._openai_agents is deprecated:DeprecationWarning",
]
